--- a/sass/base/_bg.scss
+++ b/sass/base/_bg.scss
@@ -3,6 +3,10 @@ body {
 	background-color: $light-bg-color-2;
 }
 
+header {
+	background-color: $dark-bg-color;
+}
+
 #characters {
 	background-color: $light-bg-color-3;
 }
