--- a/css/screen.css
+++ b/css/screen.css
@@ -70,6 +70,10 @@ body,
 img {
   max-width: 100%; }
 
+.row {
+  max-width: 1360px;
+  margin: 0 auto; }
+
 body,
 div,
 section,
@@ -100,31 +104,11 @@ section:after {
   display: table;
   clear: both; }
 
-@media only screen and (min-width: 1020px) {
-  .width-container {
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1360px; }
-    .width-container:after {
-      content: "";
-      display: table;
-      clear: both; }
-    .width-container > *:nth-child(2n+1) {
-      width: calc(66.66667%);
-      float: left;
-      clear: left;
-      margin-left: 0; }
-    .width-container > *:nth-child(2n+2) {
-      width: calc(33.33333%);
-      float: left;
-      clear: none;
-      margin-right: 0; } }
-
 body {
   background-color: #F0F0F0; }
 
-header {
+header,
+footer {
   background-color: #2D2727; }
 
 #characters {
@@ -144,10 +128,63 @@ header {
 #favourites h2 {
   background-image: url("../img/icons/favourites.png"); }
 
-header .width-container div {
+header .col {
   padding: 1.5rem 1.5rem; }
 header #marvel-logo {
   height: 3rem; }
+
+@media only screen and (min-width: 1020px) {
+  main .row {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1360px; }
+    main .row:after {
+      content: "";
+      display: table;
+      clear: both; }
+    main .row > *:nth-child(2n+1) {
+      width: calc(66.66667%);
+      float: left;
+      clear: left;
+      margin-left: 0; }
+    main .row > *:nth-child(2n+2) {
+      width: calc(33.33333%);
+      float: left;
+      clear: none;
+      margin-right: 0; } }
+
+@media only screen and (min-width: 1020px) {
+  footer .row {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1360px; }
+    footer .row:after {
+      content: "";
+      display: table;
+      clear: both; }
+    footer .row > *:nth-child(2n+1) {
+      width: calc(66.66667%);
+      float: left;
+      clear: left;
+      margin-left: 0; }
+    footer .row > *:nth-child(2n+2) {
+      width: calc(33.33333%);
+      float: left;
+      clear: none;
+      margin-right: 0; } }
+footer p {
+  margin: 0.75rem 0 0; }
+footer .grability-logo-container:after {
+  content: "";
+  display: table;
+  clear: both; }
+footer .grability-logo-container img {
+  float: right;
+  height: 3rem; }
+footer .col {
+  padding: 1.5rem 1.5rem; }
 
 #characters h2,
 #favourites h2 {
