--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -1,4 +1,13 @@
 @mixin type-setting($level: 0) {
-  font-size: type-scale($level);
-  line-height: line-height($level);
+	font-size: type-scale($level);
+	line-height: line-height($level);
+}
+
+@mixin two-columns-row {
+	.row {
+		@media only screen and (min-width: $bp-2) {
+			@include columns((2,1));
+			max-width: $max-width;
+		}
+	}
 }
