--- a/sass/sections/_layout.scss
+++ b/sass/sections/_layout.scss
@@ -1,12 +1,34 @@
 header {
-	.width-container {
-		div {
-			padding: $base-line-height $base-line-height;
-		}
+	.col {
+		padding: $base-line-height $base-line-height;
 	}
 
 	#marvel-logo {
 		height: $base-line-height * 2;
+	}
+}
+
+main {
+	@include two-columns-row;
+}
+
+footer {
+	@include two-columns-row;
+
+	p {
+		margin: $base-line-height * 0.5 0 0;
+	}
+
+	.grability-logo-container {
+		@include clear-fix;
+		img {
+			float: right;
+			height: $base-line-height * 2;
+		}
+	}
+
+	.col {
+		padding: $base-line-height $base-line-height;
 	}
 }
 
