--- a/css/screen.css
+++ b/css/screen.css
@@ -132,6 +132,50 @@ header .col {
   padding: 1.5rem 1.5rem; }
 header #marvel-logo {
   height: 3rem; }
+@media only screen and (min-width: 680px) {
+  header .row {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1360px; }
+    header .row:after {
+      content: "";
+      display: table;
+      clear: both; }
+    header .row > *:nth-child(2n+1) {
+      width: calc(33.33333%);
+      float: left;
+      clear: left;
+      margin-left: 0; }
+    header .row > *:nth-child(2n+2) {
+      width: calc(66.66667%);
+      float: left;
+      clear: none;
+      margin-right: 0; } }
+@media only screen and (min-width: 1020px) {
+  header .row {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1360px; }
+    header .row:after {
+      content: "";
+      display: table;
+      clear: both; }
+    header .row > *:nth-child(3n+1) {
+      width: calc(16.66667%);
+      float: left;
+      clear: left;
+      margin-left: 0; }
+    header .row > *:nth-child(3n+2) {
+      width: calc(50%);
+      float: left;
+      clear: none; }
+    header .row > *:nth-child(3n+3) {
+      width: calc(33.33333%);
+      float: left;
+      clear: none;
+      margin-right: 0; } }
 
 @media only screen and (min-width: 1020px) {
   main .row {
@@ -154,7 +198,7 @@ header #marvel-logo {
       clear: none;
       margin-right: 0; } }
 
-@media only screen and (min-width: 1020px) {
+@media only screen and (min-width: 680px) {
   footer .row {
     max-width: 960px;
     margin-left: auto;
@@ -175,7 +219,7 @@ header #marvel-logo {
       clear: none;
       margin-right: 0; } }
 footer p {
-  margin: 0.75rem 0 0; }
+  margin: 0.75rem 0; }
 footer .grability-logo-container:after {
   content: "";
   display: table;
@@ -189,5 +233,30 @@ footer .col {
 #characters h2,
 #favourites h2 {
   padding-left: 4.5rem; }
+
+.search {
+  background-color: #F4F4F4;
+  border-radius: 5px; }
+  .search:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .search input {
+    display: block;
+    float: left;
+    width: calc(100% - 48px);
+    height: 3rem;
+    padding: 0 0 0 0.75rem;
+    border: 0;
+    margin: 0;
+    background-color: transparent; }
+  .search button {
+    display: block;
+    float: right;
+    padding: 0;
+    border: 0;
+    background-color: transparent; }
+    .search button img {
+      height: 3rem; }
 
 /*# sourceMappingURL=screen.css.map */
