--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -3,9 +3,9 @@
 	line-height: line-height($level);
 }
 
-@mixin two-columns-row {
+@mixin two-columns-row($bp) {
 	.row {
-		@media only screen and (min-width: $bp-2) {
+		@media only screen and (min-width: $bp) {
 			@include columns((2,1));
 			max-width: $max-width;
 		}
