--- a/sass/sections/_layout.scss
+++ b/sass/sections/_layout.scss
@@ -6,17 +6,29 @@ header {
 	#marvel-logo {
 		height: $base-line-height * 2;
 	}
+
+	.row {
+		@media only screen and (min-width: $bp-1) {
+			@include columns((1,2));
+			max-width: $max-width;
+		}
+
+		@media only screen and (min-width: $bp-2) {
+			@include columns((1,3,2));
+			max-width: $max-width;
+		}
+	}
 }
 
 main {
-	@include two-columns-row;
+	@include two-columns-row($bp-2);
 }
 
 footer {
-	@include two-columns-row;
+	@include two-columns-row($bp-1);
 
 	p {
-		margin: $base-line-height * 0.5 0 0;
+		margin: $base-line-height * 0.5 0;
 	}
 
 	.grability-logo-container {
