--- a/sass/sections/_layout.scss
+++ b/sass/sections/_layout.scss
@@ -17,11 +17,30 @@ header {
 			@include columns((1,3,2));
 			max-width: $max-width;
 		}
+
+		@media only screen and (min-width: $bp-3) {
+			@include columns((2,4,2));
+			max-width: $max-width;
+		}
 	}
 }
 
 main {
 	@include two-columns-row($bp-2);
+	
+	.characters-container {
+		@media only screen and (min-width: $bp-3) {
+			@include columns(2, $margin: 0 $base-line-height $base-line-height);
+			max-width: $max-width;
+		}
+	}
+
+	#characters,
+	#favourites {
+		h2 {
+			padding-left: $base-line-height * 3;
+		}
+	}
 }
 
 footer {
@@ -44,10 +63,5 @@ footer {
 	}
 }
 
-#characters,
-#favourites {
-	h2 {
-		padding-left: $base-line-height * 3;
-	}
-}
+	
 
