--- a/css/screen.css
+++ b/css/screen.css
@@ -51,8 +51,7 @@ h1,
 h2,
 h3,
 h4,
-p,
-li {
+p {
   max-width: 33rem; }
 
 body {
@@ -71,7 +70,7 @@ img {
   max-width: 100%; }
 
 .row {
-  max-width: 1360px;
+  max-width: 1700px;
   margin: 0 auto; }
 
 body,
@@ -98,6 +97,9 @@ li {
 
 section {
   padding: 1.5rem 1.5rem 0; }
+
+ul {
+  list-style: none; }
 
 section:after {
   content: "";
@@ -137,7 +139,7 @@ header #marvel-logo {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     header .row:after {
       content: "";
       display: table;
@@ -157,7 +159,7 @@ header #marvel-logo {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     header .row:after {
       content: "";
       display: table;
@@ -181,7 +183,7 @@ header #marvel-logo {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     header .row:after {
       content: "";
       display: table;
@@ -206,7 +208,7 @@ header #marvel-logo {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     main .container > .row:after {
       content: "";
       display: table;
@@ -226,7 +228,7 @@ header #marvel-logo {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     main .container > .row:after {
       content: "";
       display: table;
@@ -246,7 +248,7 @@ header #marvel-logo {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     main .characters-container:after {
       content: "";
       display: table;
@@ -272,7 +274,7 @@ main #favourites h2 {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     footer .container > .row:after {
       content: "";
       display: table;
@@ -292,7 +294,7 @@ main #favourites h2 {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1360px; }
+    max-width: 1700px; }
     footer .container > .row:after {
       content: "";
       display: table;
@@ -358,7 +360,7 @@ footer .col {
           margin-left: -2.25rem; } }
       @media only screen and (min-width: 1360px) {
         .character-container .character img {
-          max-width: 120%; } }
+          max-width: 110%; } }
     .character-container .character h3 {
       text-transform: uppercase; }
     .character-container .character button {
@@ -414,5 +416,63 @@ footer .col {
           float: left;
           clear: none;
           margin-right: 0; } }
+
+.comics-container {
+  padding-top: 1.5rem;
+  height: 100%; }
+  .comics-container .comic {
+    position: relative;
+    max-width: 300px;
+    margin: 0 auto 1.5rem; }
+    .comics-container .comic:after {
+      content: "";
+      display: table;
+      clear: both; }
+    .comics-container .comic .delete {
+      position: absolute;
+      right: -0.75rem;
+      top: -0.75rem; }
+    .comics-container .comic .cover {
+      margin-bottom: 1.5rem; }
+  @media only screen and (min-width: 680px) {
+    .comics-container {
+      max-width: 960px;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 640px;
+      margin: 0 auto; }
+      .comics-container:after {
+        content: "";
+        display: table;
+        clear: both; }
+      .comics-container > *:nth-child(2n+1) {
+        width: calc(50% - 1.5rem - 1.5rem + 0.75rem + 0.75rem);
+        float: left;
+        margin: 0 1.5rem 1.5rem;
+        clear: left;
+        margin-left: 0; }
+      .comics-container > *:nth-child(2n+2) {
+        width: calc(50% - 1.5rem - 1.5rem + 0.75rem + 0.75rem);
+        float: left;
+        margin: 0 1.5rem 1.5rem;
+        clear: none;
+        margin-right: 0; } }
+  @media only screen and (min-width: 1020px) {
+    .comics-container {
+      max-width: 960px;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 300px;
+      margin: 0 auto; }
+      .comics-container:after {
+        content: "";
+        display: table;
+        clear: both; }
+      .comics-container > *:nth-child(1n+1) {
+        width: calc(100%);
+        float: left;
+        clear: left;
+        margin-left: 0;
+        margin-right: 0; } }
 
 /*# sourceMappingURL=screen.css.map */
