--- a/css/screen.css
+++ b/css/screen.css
@@ -16,7 +16,9 @@ body {
   margin-right: auto; }
 
 /*--------- End of NeutronCSS ---------*/
-body {
+body,
+button,
+input {
   font-family: "Roboto", sans-serif;
   font-weight: 400; }
 
@@ -130,78 +132,81 @@ footer {
 #favourites h2 {
   background-image: url("../img/icons/favourites.png"); }
 
-header .col {
-  padding: 1.5rem 1.5rem; }
-header #marvel-logo {
-  height: 3rem; }
-@media only screen and (min-width: 680px) {
-  header .row {
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1700px; }
-    header .row:after {
-      content: "";
-      display: table;
-      clear: both; }
-    header .row > *:nth-child(2n+1) {
-      width: calc(33.33333%);
-      float: left;
-      clear: left;
-      margin-left: 0; }
-    header .row > *:nth-child(2n+2) {
-      width: calc(66.66667%);
-      float: left;
-      clear: none;
-      margin-right: 0; } }
-@media only screen and (min-width: 1020px) {
-  header .row {
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1700px; }
-    header .row:after {
-      content: "";
-      display: table;
-      clear: both; }
-    header .row > *:nth-child(3n+1) {
-      width: calc(16.66667%);
-      float: left;
-      clear: left;
-      margin-left: 0; }
-    header .row > *:nth-child(3n+2) {
-      width: calc(50%);
-      float: left;
-      clear: none; }
-    header .row > *:nth-child(3n+3) {
-      width: calc(33.33333%);
-      float: left;
-      clear: none;
-      margin-right: 0; } }
-@media only screen and (min-width: 1360px) {
-  header .row {
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1700px; }
-    header .row:after {
-      content: "";
-      display: table;
-      clear: both; }
-    header .row > *:nth-child(3n+1) {
-      width: calc(25%);
-      float: left;
-      clear: left;
-      margin-left: 0; }
-    header .row > *:nth-child(3n+2) {
-      width: calc(50%);
-      float: left;
-      clear: none; }
-    header .row > *:nth-child(3n+3) {
-      width: calc(25%);
-      float: left;
-      clear: none;
-      margin-right: 0; } }
+header {
+  position: relative;
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.5); }
+  header .col {
+    padding: 1.5rem 1.5rem; }
+  header #marvel-logo {
+    height: 3rem; }
+  @media only screen and (min-width: 680px) {
+    header .row {
+      max-width: 960px;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 1700px; }
+      header .row:after {
+        content: "";
+        display: table;
+        clear: both; }
+      header .row > *:nth-child(2n+1) {
+        width: calc(33.33333%);
+        float: left;
+        clear: left;
+        margin-left: 0; }
+      header .row > *:nth-child(2n+2) {
+        width: calc(66.66667%);
+        float: left;
+        clear: none;
+        margin-right: 0; } }
+  @media only screen and (min-width: 1020px) {
+    header .row {
+      max-width: 960px;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 1700px; }
+      header .row:after {
+        content: "";
+        display: table;
+        clear: both; }
+      header .row > *:nth-child(3n+1) {
+        width: calc(16.66667%);
+        float: left;
+        clear: left;
+        margin-left: 0; }
+      header .row > *:nth-child(3n+2) {
+        width: calc(50%);
+        float: left;
+        clear: none; }
+      header .row > *:nth-child(3n+3) {
+        width: calc(33.33333%);
+        float: left;
+        clear: none;
+        margin-right: 0; } }
+  @media only screen and (min-width: 1360px) {
+    header .row {
+      max-width: 960px;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 1700px; }
+      header .row:after {
+        content: "";
+        display: table;
+        clear: both; }
+      header .row > *:nth-child(3n+1) {
+        width: calc(25%);
+        float: left;
+        clear: left;
+        margin-left: 0; }
+      header .row > *:nth-child(3n+2) {
+        width: calc(50%);
+        float: left;
+        clear: none; }
+      header .row > *:nth-child(3n+3) {
+        width: calc(25%);
+        float: left;
+        clear: none;
+        margin-right: 0; } }
 
 @media only screen and (min-width: 1020px) {
   main .container > .row {
@@ -474,5 +479,132 @@ footer .col {
         clear: left;
         margin-left: 0;
         margin-right: 0; } }
+
+.lightbox {
+  position: fixed;
+  top: 0;
+  background-color: #FFFFFF;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(45, 39, 39, 0.9);
+  display: none; }
+  .lightbox .comic-details {
+    position: relative;
+    max-width: 1020px;
+    margin: 0 auto;
+    background-color: #FFFFFF; }
+  .lightbox .close-button {
+    position: absolute;
+    right: 1.5rem;
+    top: 1.5rem; }
+  .lightbox .content {
+    overflow: hidden; }
+    .lightbox .content img {
+      height: calc(30vh - 24px); }
+    .lightbox .content .text {
+      padding-top: 1.5rem;
+      height: calc(70vh - 48px);
+      overflow: auto; }
+      .lightbox .content .text h2 {
+        text-transform: uppercase; }
+      @media only screen and (min-width: 1020px) {
+        .lightbox .content .text {
+          height: auto; } }
+    @media only screen and (min-width: 680px) {
+      .lightbox .content {
+        max-width: 960px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1020px;
+        height: calc(100vh - 48px); }
+        .lightbox .content:after {
+          content: "";
+          display: table;
+          clear: both; }
+        .lightbox .content > *:nth-child(2n+1) {
+          width: calc(33.33333% - 0.75rem - 0.75rem + 0.375rem + 0.375rem);
+          float: left;
+          margin: 0 0.75rem 1.5rem;
+          clear: left;
+          margin-left: 0; }
+        .lightbox .content > *:nth-child(2n+2) {
+          width: calc(66.66667% - 0.75rem - 0.75rem + 0.375rem + 0.375rem);
+          float: left;
+          margin: 0 0.75rem 1.5rem;
+          clear: none;
+          margin-right: 0; }
+        .lightbox .content div {
+          padding-top: 1.5rem; }
+          .lightbox .content div img {
+            width: 100%;
+            height: auto; } }
+    @media only screen and (min-width: 1020px) {
+      .lightbox .content {
+        height: auto; } }
+  .lightbox .buttons {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1020px; }
+    .lightbox .buttons:after {
+      content: "";
+      display: table;
+      clear: both; }
+    .lightbox .buttons > *:nth-child(2n+1) {
+      width: calc(50%);
+      float: left;
+      clear: left;
+      margin-left: 0; }
+    .lightbox .buttons > *:nth-child(2n+2) {
+      width: calc(50%);
+      float: left;
+      clear: none;
+      margin-right: 0; }
+    .lightbox .buttons li {
+      margin: 0; }
+    .lightbox .buttons button {
+      width: 100%;
+      height: 3rem;
+      padding: 0 1.5rem;
+      border: 0;
+      margin: 0;
+      text-transform: uppercase; }
+      @media only screen and (min-width: 680px) {
+        .lightbox .buttons button {
+          font-size: 1.2rem;
+          line-height: 1.5rem; }
+          .lightbox .buttons button::before {
+            content: " ";
+            display: inline-block;
+            width: 1.5rem;
+            height: 1.5rem;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            vertical-align: middle;
+            margin-right: 0.75rem; } }
+    .lightbox .buttons .add-button {
+      background-color: #F4F4F4; }
+      @media only screen and (min-width: 680px) {
+        .lightbox .buttons .add-button::before {
+          background-image: url("../img/icons/btn-favourites-default.png"); } }
+    .lightbox .buttons .buy-button {
+      background-color: #EBEBEB;
+      color: #EC1D23; }
+      @media only screen and (min-width: 680px) {
+        .lightbox .buttons .buy-button::before {
+          background-image: url("../img/icons/shopping-cart-primary.png"); } }
+  @media only screen and (min-width: 1020px) {
+    .lightbox {
+      padding: 1.5rem 0;
+      display: none;
+      justify-content: center;
+      align-items: center; } }
+
+.visible {
+  display: block; }
+  @media only screen and (min-width: 1020px) {
+    .visible {
+      display: flex; } }
 
 /*# sourceMappingURL=screen.css.map */
