--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -9,3 +9,5 @@
 @import "modules/search";
 @import "modules/character";
 @import "modules/comic";
+@import "modules/comic-details";
+@import "states/visible";
