--- a/sass/sections/_layout.scss
+++ b/sass/sections/_layout.scss
@@ -1,4 +1,7 @@
 header {
+	position: relative;
+	box-shadow: 0px 2px 10px 2px rgba(black, 0.5);
+
 	.col {
 		padding: $base-line-height $base-line-height;
 	}
