--- a/sass/modules/_character.scss
+++ b/sass/modules/_character.scss
@@ -3,7 +3,7 @@
 
 	.character {
 		background-color: $light-bg-color-4;
-		margin-bottom: $base-line-height * 2;
+		margin-bottom: $base-line-height;
 
 		img {
 			border-radius: 100%;
