--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -10,4 +10,5 @@
 @import "modules/character";
 @import "modules/comic";
 @import "modules/comic-details";
+@import "modules/pagination";
 @import "states/visible";
