--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -10,5 +10,6 @@
 @import "modules/character";
 @import "modules/comic";
 @import "modules/comic-details";
+@import "modules/sort";
 @import "modules/pagination";
 @import "states/visible";
